fix(campaign) larger spacing between attachments

--- a/site/web/app/themes/sage/assets/styles/common/_global.scss
+++ b/site/web/app/themes/sage/assets/styles/common/_global.scss
@@ -700,6 +700,16 @@ h2:after {
   padding-left: 0;
 }
 
+#campaign-content #collapseCampaignInfo ul li {
+  padding: 2px 0;
+}
+
+@include media-breakpoint-down(sm) {
+  #campaign-content #collapseCampaignInfo ul li {
+    padding: 7px 0;
+  }
+}
+
 #campaign-content #collapseCampaignInfo svg {
   margin-right: 10px;
   color: #007bff;
